--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@wdio/local-runner": "^9.12.1",
     "@wdio/mocha-framework": "^9.12.1",
     "@wdio/visual-service": "^6.3.3",
+    "allure-commandline": "^2.34.0",
     "typescript": "^5.8.2"
   },
   "scripts": {
@@ -16,7 +17,7 @@
     "start": "node dist/api/index.js",
     "wdio": "wdio run ./wdio.conf.ts",
     "dev": "ts-node index.ts",
-    "allure:report": "npx allure generate allure-results --clean && npx allure open"
+    "allure:report": "allure generate --clean allure-results && allure open"
   },
   "dependencies": {
     "express": "^4.21.2"
